inserimento background e immagini interne degli stessi

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </ul>
     </nav>
     <main>
-        <div class="container-red">
-
+        <div class="container red">
+            <img class="shoe" src="img/01.png" alt="Modello di punta">
         </div>
-        <div class="container-green">
-
+        <div class="container green">
+            <img class="shoe" src="img/02.png" alt="Modello di punta">
         </div>
-        <div class="container-green">
-            
+        <div class="container yellow">
+            <img class="shoe" src="img/03.png" alt="Modello di punta">
         </div>
     </main>
     
